<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_mapview">Map Location</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_detail">Forecast Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">32905</string>

    <!-- Label for the units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Key name for storing units in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Metric option for units preference -->
    <string name="pref_units_metric" translatable="false">Metric</string>

    <!-- Imperial option for units preference -->
    <string name="pref_units_imperial" translatable="false">Imperial</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_units_default" translatable="false">@string/pref_units_metric</string>

    <!-- Notification preference -->
    <string name="pref_notification_label">Enable Notifications</string>
    <string name="pref_notification_key" translatable="false">notification</string>

    <string name="pref_notification_true">Enabled</string>
    <string name="pref_notification_false">Not Enabled</string>
    <string name="pref_notification_default" translatable="false">true</string>

    <!-- Icon Pack preference -->
    <string name="pref_icon_pack_label">Icon Pack</string>
    <string name="pref_icon_pack_key" translatable="false">icon_pack</string>

    <string name="pref_icon_pack_label_color">Color</string>
    <string name="pref_icon_pack_color" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Colored/art_%s.png</string>

    <string name="pref_icon_pack_label_mono">Mono</string>
    <string name="pref_icon_pack_mono" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Mono/art_%s.png</string>

    <string name="pref_icon_pack_default" translatable="false">@string/pref_icon_pack_color</string>

    <!-- Preference data for last sync operation -->
    <string name="pref_location_status_key" translatable="false">location_status</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.roff.us</string>
    <string name="content_authority">us.roff.rroff.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Empty Weather Database -->
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <!-- Content Descriptor Strings -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast Icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="temp">%1$s</xliff:g></string>
    <string name="ally_low_temp">Low: <xliff:g id="temp">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>

    <!-- Shared Element Transitions -->
    <string name="detail_icon_transition_name" translatable="false">detail_icon_transition</string>

    <!-- Widget -->
    <string name="title_widget_today">Sunshine Today</string>
    <string name="title_widget_detail">Sunshine Details</string>

    <!-- Muzei -->
    <string name="muzei_description">Current Weather</string>
</resources>
