<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <us.roff.rroff.sunshine.LocationEditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        app:minLength="3" />

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_entries"
        android:defaultValue="@string/pref_units_default" />

    <ListPreference
        android:title="@string/pref_icon_pack_label"
        android:key="@string/pref_icon_pack_key"
        android:entries="@array/pref_icon_pack_options"
        android:entryValues="@array/pref_icon_pack_values"
        android:defaultValue="@string/pref_icon_pack_default" />

    <CheckBoxPreference
        android:title="@string/pref_notification_label"
        android:key="@string/pref_notification_key"
        android:summaryOff="@string/pref_notification_false"
        android:summaryOn="@string/pref_notification_true"
        android:defaultValue="@string/pref_notification_default"/>

</PreferenceScreen>